--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -87,6 +87,7 @@
     <!--<a href="feedbackyform.html" id="fdbk_tab" class="fdbk_tab_left ">FEEDBACK</a>-->
     <div data-ng-view id="ng-view" ng-animate="{enter: 'view-enter'}"></div>
 
+  <img class="version" src="static/img/alpha.png" alt="Alfa verze">
 
     <!-- Le javascript
     ================================================== -->
