--- a/wsgi/static/css/map.css
+++ b/wsgi/static/css/map.css
@@ -3,9 +3,10 @@ svg .states {
 	\*fill: #fff;*\
     stroke-width: 0.2;
     cursor: pointer;
+    fill-opacity: 1;
 }
 svg .states:hover {
-    \*fill: #f9f9f9;*\
-    stroke-width: 0.5,
+    *fill: #f9f9f9;*\
+    fill-opacity: 0.8;
 }
 
