--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -48,6 +48,9 @@
             <form id="login-form" style="margin: 0;" accept-charset="utf-8" method="post" action="" ng-submit="login()">
             <ul class="nav">
                 <li class="dropdown" ng-show="user.username == ''">
+                  <a href="convert/" >Registrovat se </a>
+                </li>
+                <li class="dropdown" ng-show="user.username == ''">
                   <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Přihlásit se <b class="caret"></b></a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop1">
                     <!--
