finally should be working

--- a/wsgi/openshift/lazysignup/templates/lazysignup/convert.html
+++ b/wsgi/openshift/lazysignup/templates/lazysignup/convert.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
 <html>
-  <head>Convert</head>
+  <head>Registrace</head>
   <body>
     <form method="post" action="{% url 'lazysignup_convert' %}">
       {% csrf_token %}
