--- a/wsgi/openshift/lazysignup/templates/lazysignup/done.html
+++ b/wsgi/openshift/lazysignup/templates/lazysignup/done.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title>Conversion Done</title>
+    <title>Registrace hotova</title>
   </head>
   <body>
-    <h1>Conversion Done</h1>
+    <h1>Registrace hotova</h1>
+    Pokračujte na <a href="/">hlavní stránku</a>.
   </body>
 </html>
