--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -49,7 +49,7 @@
                 <li class="dropdown" ng-show="user.username == ''">
                   <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Registrovat se <b class="caret"></b></a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop1">
-    <form method="post" action="/convert/">
+    <form method="post" action="/convert/" style="margin: 0;">
                     {% csrf_token %}
                    <li><input id="id_username" type="text" name="username" maxlength="30" placeholder="Uživatelské jméno" class="in" title="Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only" /></li>
                     <li><input type="password" name="password1" id="id_password1"  placeholder="Heslo"/></li>
@@ -62,7 +62,7 @@
                 <li class="dropdown" ng-show="user.username == ''">
                   <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Přihlásit se <b class="caret"></b></a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop1">
-            <form id="login-form" style="margin: 0;" accept-charset="utf-8" method="post" action="" ng-submit="login()">
+            <form id="login-form" style="margin: 0;" accept-charset="utf-8" method="post" ng-submit="login()">
                     <!--
                     <li><span data-gapiattached="true" class="signup-gplus btn small" id="gplusSignIn"><span class="icon"></span>Sign in with Google</span></li>
                     <li><span class="signup-facebook btn small"><span class="icon"></span>Sign in with Facebook</span></li>
@@ -84,7 +84,7 @@
                     <li class="forgot-pwd"><a href="#" ng-click="logout()">Odhlásit se</a></li>
                   </ul>
                 </li>
-              <li id="points" class="atooltip" title="Body">
+              <li id="points" class="atooltip" title="Body" ng-show="user.points">
                 <a><span class="badge" ng-bind="user.points"></span></a>
               </li>
               <!--<li>
