--- a/wsgi/openshift/core/static/css/map.css
+++ b/wsgi/openshift/core/static/css/map.css
@@ -1,9 +1,17 @@
 
+svg .bg {
+	fill: #fff;
+    fill-opacity: 1;
+    cursor: pointer;
+}
+svg .bg:hover {
+    fill: #ddd;
+}
+
 svg .states {
-	\*fill: #fff;*\
     stroke-width: 0.2;
     cursor: pointer;
-    fill-opacity: 1;
+    fill-opacity: 0;
 }
 svg .states:hover {
     *fill: #f9f9f9;*\
