--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -70,7 +70,9 @@
                     -->
                     <li><input ng-model="username" name="username" autocomplete="on" type="text" placeholder="Uživatelské jméno"></li>
                     <li><input ng-model="password" name="password" autocomplete="on" type="password" placeholder="Heslo"></li>
-                    <li id="message" class="login-fail"><div class="alert alert-error" ng-show="loginFail" ng-bind="loginFail"></div></li>
+                    <li id="message" class="login-fail">
+                        <div class="alert" ng:class="{true:'elert-success', false:'alert-error'}[loginResponse.success]" ng-show="loginResponse" ng-bind="loginResponse.message"></div>
+                    </li>
                     <li><button id="login-button" class="btn input-block-level" ng-disabled="username == '' || password == ''">Přihlásit se</button></li>
                     <!--
                     <li class="forgot-pwd"><a href="/#/forgot_password">Forgot password</a></li>
