--- a/wsgi/static/css/app.css
+++ b/wsgi/static/css/app.css
@@ -201,6 +201,25 @@ top: 40px;
   background: url(../img/flower_bg.jpg) bottom right;
 }
 
+.select2-results {
+max-height: 300px;
+}
+
+.select2-container.select2 .select2-choice{
+    -webkit-border-radius:0 4px 4px 0;
+       -moz-border-radius:0 4px 4px 0;
+            border-radius:0 4px 4px 0;
+}
+.select2-container.select2 {
+    margin-left: -5px;
+}
+
+.select2-container.starters .select2-choice{
+    -webkit-border-radius:4px 0 0 4px;
+       -moz-border-radius:4px 0 0 4px;
+            border-radius:4px 0 0 4px;
+}
+
 @media (max-width: 979px) {
 body {
     padding-top: 0px;
