mobile form  support

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -114,7 +114,7 @@
     <script src="static/lib/select2/select2.min.js"></script>
     <script src="static/lib/angular/angular.min.js"></script> 
     <script src="static/lib/angular/angular-cookies.js"></script> 
-    <script src="static/lib/js/raphael-min.js"></script> 
+    <script src="static/lib/js/raphael.js"></script> 
     <script src="static/lib/js/kartograph.js"></script> 
     <script src="static/lib/js/chroma.min.js"></script> 
     <script src="static/lib/js/jquery.qtip.min.js"></script> 
