--- a/wsgi/static/css/app.css
+++ b/wsgi/static/css/app.css
@@ -66,7 +66,7 @@ h2 span {
 
 .map-container center {
     height: 500px;
-    box-shadow: 0px 0px 20px #888; 
+    box-shadow: 0px 0px 20px #888;
 }
 
 .map-container {
@@ -106,6 +106,9 @@ h2 span {
     position: absolute;
     bottom: 10px;
     right: 10px;
+}
+.btn {
+    margin-left:10px;
 }
 
 .map-positioner h1 {
@@ -191,7 +194,7 @@ ul.dropdown-menu.login li {
     margin-left: 10px;
 }
 
-.version { 
+.version {
 border: 0px none currentColor;
 left: 0px;
 position: absolute;
