--- a/wsgi/static/css/app.css
+++ b/wsgi/static/css/app.css
@@ -11,7 +11,6 @@ body {
     position: relative;
 }
 
-
 .thumbnail {
     background: white;
 }
@@ -30,7 +29,7 @@ h2 .label {
 }
 
 h2 span {
-    float:left;
+    float: left;
     margin-right: 20px;
 }
 
@@ -48,8 +47,7 @@ h2 span {
     position: relative;
 }
 
-.thumb-bg,
-.map-container {
+.thumb-bg, .map-container {
     background-color: #73c5ef;
     background: -webkit-linear-gradient(top, #73c5ef, #1a82f7);
     background: -moz-linear-gradient(top, #73c5ef, #1a82f7);
@@ -93,9 +91,8 @@ h2 span {
     text-align: center;
     background: #eee;
     margin: -3px -3px 3px -3px;
-    border-radius: 3px 3px 0 0 ;
+    border-radius: 3px 3px 0 0;
     border-bottom: 1px solid #ddd;
-
 }
 
 .view-places {
@@ -108,7 +105,7 @@ h2 span {
     right: 10px;
 }
 .btn {
-    margin-left:10px;
+    margin-left: 10px;
 }
 
 .map-positioner h1 {
@@ -128,60 +125,67 @@ h2 span {
     height: 500px;
 }
 
-.select2-container .select2-choice ,
-.select2-choice div  {
+.navbar i.icon-user {
+    opacity: 0.5;
+}
+
+.navbar *:hover > i.icon-user {
+    opacity: 1;
+}
+
+.select2-container .select2-choice, .select2-choice div {
     padding: 8px;
     font-size: 20px;
 }
 
 a#fdbk_tab {
-background-color: #222;
-top: 25%;
-left: 0;
-width: 42px;
-height: 102px;
-color: white;
-cursor: pointer;
-text-indent: -100000px;
-overflow: hidden;
-position: fixed;
-z-index: 100000;
-margin-left: -7px;
-background-image: url(../img/feedback_trans_tab.png);
-_position: absolute;
-_background-image: url(../img/feedback_tab_ie6.png);
-background-color:#222;
+    background-color: #222;
+    top: 25%;
+    left: 0;
+    width: 42px;
+    height: 102px;
+    color: white;
+    cursor: pointer;
+    text-indent: -100000px;
+    overflow: hidden;
+    position: fixed;
+    z-index: 100000;
+    margin-left: -7px;
+    background-image: url(../img/feedback_trans_tab.png);
+    _position: absolute;
+    _background-image: url(../img/feedback_tab_ie6.png);
+    background-color: #222;
 }
 
 a#fdbk_tab:hover {
-margin-left: -4px;
+    margin-left: -4px;
 }
 
 #ng-view {
-  position:relative;
-  min-height:500px;
+    position: relative;
+    min-height: 500px;
 }
 
 .view-enter-setup, .view-leave-setup, .slide-enter-setup, .slide-leave-setup, .wave-enter-setup, .wave-leave-setup {
-  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -ms-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -ms-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
 
 .view-enter-setup {
-  opacity:0;
+    opacity: 0;
 }
 .view-enter-setup.view-enter-start {
-  opacity:1;
+    opacity: 1;
 }
 
 .view-leave-setup {
-  opacity:1;
+    opacity: 1;
 }
 .view-leave-setup.view-leave-start {
-  opacity:0;
+    opacity: 0;
 }
 
 ul.dropdown-menu.login {
@@ -195,55 +199,55 @@ ul.dropdown-menu.login li {
 }
 
 .version {
-border: 0px none currentColor;
-left: 0px;
-position: absolute;
-top: 40px;
+    border: 0px none currentColor;
+    left: 0px;
+    position: absolute;
+    top: 40px;
 }
 
 .vip {
-  background: url(../img/flower_bg.jpg) bottom right;
+    background: url(../img/flower_bg.jpg) bottom right;
 }
 
 .select2-results {
-max-height: 300px;
+    max-height: 300px;
 }
 
-.select2-container.select2 .select2-choice{
-    -webkit-border-radius:0 4px 4px 0;
-       -moz-border-radius:0 4px 4px 0;
-            border-radius:0 4px 4px 0;
+.select2-container.select2 .select2-choice {
+    -webkit-border-radius: 0 4px 4px 0;
+    -moz-border-radius: 0 4px 4px 0;
+    border-radius: 0 4px 4px 0;
 }
 .select2-container.select2 {
     margin-left: -5px;
 }
 
-.select2-container.starters .select2-choice{
-    -webkit-border-radius:4px 0 0 4px;
-       -moz-border-radius:4px 0 0 4px;
-            border-radius:4px 0 0 4px;
+.select2-container.starters .select2-choice {
+    -webkit-border-radius: 4px 0 0 4px;
+    -moz-border-radius: 4px 0 0 4px;
+    border-radius: 4px 0 0 4px;
 }
 
 @media (max-width: 979px) {
-body {
-    padding-top: 0px;
-}
-.map-container {
-    margin-top: -20px;
-}
-.map-positioner h1 {
-    left: 0px;
-    z-index: 200;
-}
-.version {
-    display: none;
-}
+    body {
+        padding-top: 0px;
+    }
+    .map-container {
+        margin-top: -20px;
+    }
+    .map-positioner h1 {
+        left: 0px;
+        z-index: 200;
+    }
+    .version {
+        display: none;
+    }
 }
 
 @media (max-width: 767px) {
-.map-container {
-    margin-right: -20px;
-    margin-left: -20px;
-}
+    .map-container {
+        margin-right: -20px;
+        margin-left: -20px;
+    }
 }
 
