--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -81,7 +81,7 @@
                   </ul>
                 </li>
                 <li class="dropdown" ng-show="user.username != ''">
-                  <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown"><span ng-bind="user.username"></span> <b class="caret"></b></a>
+                  <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> <span ng-bind="user.username"></span> <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
                     <li class="forgot-pwd"><a href="#" ng-click="logout()">Odhlásit se</a></li>
                   </ul>
@@ -98,7 +98,7 @@
         </div>
       </div>
     </div>
-    <!-- Main content 
+    <!-- Main content
     ================================================== -->
     <!--<a href="feedbackyform.html" id="fdbk_tab" class="fdbk_tab_left ">FEEDBACK</a>-->
     <div data-ng-view id="ng-view" ng-animate="{enter: 'view-enter'}"></div>
@@ -112,12 +112,12 @@
     <script src="static/lib/js/jquery.colorbox-min.js"></script>
     <script src="static/lib/js/bootstrap.js"></script>
     <script src="static/lib/select2/select2.min.js"></script>
-    <script src="static/lib/angular/angular.min.js"></script> 
-    <script src="static/lib/angular/angular-cookies.js"></script> 
-    <script src="static/lib/js/raphael.js"></script> 
-    <script src="static/lib/js/kartograph.js"></script> 
-    <script src="static/lib/js/chroma.min.js"></script> 
-    <script src="static/lib/js/jquery.qtip.min.js"></script> 
+    <script src="static/lib/angular/angular.min.js"></script>
+    <script src="static/lib/angular/angular-cookies.js"></script>
+    <script src="static/lib/js/raphael.js"></script>
+    <script src="static/lib/js/kartograph.js"></script>
+    <script src="static/lib/js/chroma.min.js"></script>
+    <script src="static/lib/js/jquery.qtip.min.js"></script>
 
     <script src="static/js/map.js"></script>
     <script src="static/js/app.js"></script>
