--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    {% load staticfiles %}
     <!-- Le styles -->
     <link href="static/lib/css/bootstrap.css" rel="stylesheet">
     <link href="static/lib/css/bootstrap-responsive.css" rel="stylesheet">
@@ -17,6 +18,7 @@
 
     <link href="static/css/app.css" rel="stylesheet">
     <link href="static/css/map.css" rel="stylesheet">
+    <link href="{% static "feedback.css" %}"  rel="stylesheet" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -45,7 +47,7 @@
               </li>
             </ul>
           <div class="pull-right">
-            <ul class="nav">
+            <ul class="nav ng-cloak">
                 <li class="dropdown" ng-show="user.username == ''">
                   <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Registrovat se <b class="caret"></b></a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop1">
@@ -125,7 +127,7 @@
     <script src="static/js/services.js"></script>
     <script src="static/js/filters.js"></script>
     <script src="static/js/directives.js"></script>
-
+    <script src="{% static "feedback.js" %}"></script>
   </body>
 </html>
 
