--- a/wsgi/static/css/app.css
+++ b/wsgi/static/css/app.css
@@ -22,6 +22,10 @@ body {
     cursor: default;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none;
+}
+
 h2 .label {
     font-size: 20px;
     line-height: 30px;
@@ -104,7 +108,7 @@ h2 span {
     bottom: 10px;
     right: 10px;
 }
-.btn {
+.practice .btn {
     margin-left: 10px;
     margin-bottom: 10px;
 }
