--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -7,7 +7,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    {% load staticfiles %}
     <!-- Le styles -->
     <link href="static/lib/css/bootstrap.css" rel="stylesheet">
     <link href="static/lib/css/bootstrap-responsive.css" rel="stylesheet">
@@ -18,7 +17,6 @@
 
     <link href="static/css/app.css" rel="stylesheet">
     <link href="static/css/map.css" rel="stylesheet">
-    <link href="{% static "feedback.css" %}"  rel="stylesheet" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -27,7 +25,7 @@
 
   </head>
 
-  <body data-spy="scroll" data-target=".bs-docs-sidebar" onkeyup="inputKeyUp(event)">
+  <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
     <!-- Navbar
     ================================================== -->
@@ -127,7 +125,6 @@
     <script src="static/js/services.js"></script>
     <script src="static/js/filters.js"></script>
     <script src="static/js/directives.js"></script>
-    <script src="{% static "feedback.js" %}"></script>
   </body>
 </html>
 
