finally using sass

--- a/wsgi/openshift/core/static/css/map.css
+++ b/wsgi/openshift/core/static/css/map.css
@@ -1,15 +1,9 @@
-
 svg .bg {
-	fill: #000;
-    stroke-width: 1.5;
-}
-
+  fill: black;
+  stroke-width: 1.5; }
 svg .states {
-    stroke-width: 1;
-    cursor: pointer;
-    fill-opacity: 1;
-}
-svg .states:hover {
-    fill-opacity: 0.8;
-}
-
+  stroke-width: 1;
+  cursor: pointer;
+  fill-opacity: 1; }
+  svg .states:hover {
+    fill-opacity: 0.8; }
