--- a/wsgi/openshift/core/static/css/app.css
+++ b/wsgi/openshift/core/static/css/app.css
@@ -1,259 +1,171 @@
 body {
-    padding-top: 40px;
-    overflow-y: scroll;
-}
+  padding-top: 40px;
+  overflow-y: scroll; }
 
-#container {
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    float: none;
-    position: relative;
-}
-
-.thumbnail {
-    background: white;
-}
-
-.label {
+ul.dropdown-menu.login {
+  padding-top: 10px;
+  padding-bottom: 10px; }
+  ul.dropdown-menu.login li {
     margin-right: 10px;
-    margin-top: 5px;
-    padding-bottom: 5px;
-    cursor: default;
-}
+    margin-left: 10px; }
+  ul.dropdown-menu.login .dropdown i.icon-user {
+    opacity: 0.5; }
+  ul.dropdown-menu.login .dropdown:hover i.icon-user, ul.dropdown-menu.login .dropdown.open i.icon-user {
+    opacity: 1; }
 
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none;
-}
+.version {
+  border: 0px none currentColor;
+  left: 0px;
+  position: absolute;
+  top: 40px; }
 
-h2 .label {
-    font-size: 20px;
-    line-height: 30px;
-    padding-bottom: 0;
-}
+.vip {
+  background: url(../img/flower_bg.jpg) bottom right; }
 
-h2 span {
-    float: left;
-    margin-right: 20px;
-}
-
-.map-positioner {
+.map-container {
+  height: 500px;
+  background-color: #73c5ef;
+  background: -webkit-linear-gradient(top, #73c5ef, #1a82f7);
+  background: -moz-linear-gradient(top, #73c5ef, #1a82f7);
+  background: -o-linear-gradient(top, #73c5ef, #1a82f7);
+  background: -ms-linear-gradient(top, #73c5ef, #1a82f7);
+  box-shadow: 0px 0px 20px #888888; }
+  .map-container .map-positioner {
     position: relative;
     display: inline-block;
     height: 500px;
-    width: 700px;
-}
+    width: 700px; }
+    .map-container .map-positioner h1 {
+      position: absolute;
+      color: white;
+      left: -70px;
+      text-shadow: 1px 1px 9px rgba(0, 0, 0, 0.8), 0 0 30px rgba(0, 0, 0, 0.075); }
+    .map-container .map-positioner .map-holder {
+      height: 500px; }
+    .map-container .map-positioner .btn-practice {
+      position: absolute;
+      bottom: 10px;
+      right: 10px; }
 
-.thumb-bg {
-    height: 320px;
-    width: 100%;
-    border-radius: 3px;
-    position: relative;
-}
-
-.thumb-bg, .map-container {
-    background-color: #73c5ef;
-    background: -webkit-linear-gradient(top, #73c5ef, #1a82f7);
-    background: -moz-linear-gradient(top, #73c5ef, #1a82f7);
-    background: -o-linear-gradient(top, #73c5ef, #1a82f7);
-    background: -ms-linear-gradient(top, #73c5ef, #1a82f7);
-}
-
-.thumb-bg:hover {
-    background: -webkit-linear-gradient(top, #63c0e5, #046FE7);
-    background: -moz-linear-gradient(top, #63c0e5, #046FE7);
-    background: -o-linear-gradient(top, #63c0e5, #046FE7);
-    background: -ms-linear-gradient(top, #63c0e5, #046FE7);
-}
-
-.map-container center {
-    height: 500px;
-    box-shadow: 0px 0px 20px #888;
-}
-
-.map-container {
-    height: 500px;
-}
-
-.thumbnail > img {
-    border: 1px solid #ddd;
-    border-radius: 3px;
-}
-
-.thumb-bg h3 {
-    position: absolute;
-    bottom: 0;
-    left: 20px;
-    color: white;
-}
-
-.thumbnail h3 {
-    text-shadow: 0 1px 3px rgba(0, 0, 0, .4), 0 0 30px rgba(0, 0, 0, .075);
-}
-
-.thumbnail h3:first-child {
-    text-align: center;
-    background: #eee;
-    margin: -3px -3px 3px -3px;
-    border-radius: 3px 3px 0 0;
-    border-bottom: 1px solid #ddd;
-}
-
-.view-places {
-    margin: 10px;
-}
-
-.btn-practice {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-}
 .practice .btn {
-    margin-left: 10px;
-    margin-bottom: 10px;
-}
-
-.map-positioner h1 {
-    position: absolute;
-    color: white;
-    left: -70px;
-    text-shadow: 1px 1px 9px rgba(0, 0, 0, .8), 0 0 30px rgba(0, 0, 0, .075);
-}
+  margin-left: 10px;
+  margin-bottom: 10px; }
+.practice h2 .label {
+  font-size: 20px;
+  line-height: 30px;
+  padding-bottom: 0; }
+.practice h2 span {
+  float: left;
+  margin-right: 20px; }
 
 .map-container .progress {
-    margin-bottom: 0;
-    height: 10px;
-    margin-top: -15px;
-}
-
-.map-holder {
-    height: 500px;
-}
-
-.dropdown i.icon-user {
-    opacity: 0.5;
-}
-
-.dropdown:hover i.icon-user,
-.dropdown.open i.icon-user {
-    opacity: 1;
-}
+  margin-bottom: 0;
+  height: 10px;
+  margin-top: -15px; }
 
 .select2-container .select2-choice, .select2-choice div {
-    padding: 8px;
-    font-size: 20px;
-}
-
-a#fdbk_tab {
-    background-color: #222;
-    top: 25%;
-    left: 0;
-    width: 42px;
-    height: 102px;
-    color: white;
-    cursor: pointer;
-    text-indent: -100000px;
-    overflow: hidden;
-    position: fixed;
-    z-index: 100000;
-    margin-left: -7px;
-    background-image: url(../img/feedback_trans_tab.png);
-    _position: absolute;
-    _background-image: url(../img/feedback_tab_ie6.png);
-    background-color: #222;
-}
-
-a#fdbk_tab:hover {
-    margin-left: -4px;
-}
-
-#ng-view {
-    position: relative;
-    min-height: 500px;
-}
-
-.view-enter-setup, .view-leave-setup, .slide-enter-setup, .slide-leave-setup, .wave-enter-setup, .wave-leave-setup {
-    -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -ms-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-
-.view-enter-setup {
-    opacity: 0;
-}
-.view-enter-setup.view-enter-start {
-    opacity: 1;
-}
-
-.view-leave-setup {
-    opacity: 1;
-}
-.view-leave-setup.view-leave-start {
-    opacity: 0;
-}
-
-ul.dropdown-menu.login {
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-ul.dropdown-menu.login li {
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-.version {
-    border: 0px none currentColor;
-    left: 0px;
-    position: absolute;
-    top: 40px;
-}
-
-.vip {
-    background: url(../img/flower_bg.jpg) bottom right;
-}
+  padding: 8px;
+  font-size: 20px; }
 
 .select2-results {
-    max-height: 300px;
-}
+  max-height: 300px; }
 
-.select2-container.select2 .select2-choice {
+.select2-container.select2 {
+  margin-left: -5px; }
+  .select2-container.select2 .select2-choice {
     -webkit-border-radius: 0 4px 4px 0;
     -moz-border-radius: 0 4px 4px 0;
-    border-radius: 0 4px 4px 0;
-}
-.select2-container.select2 {
-    margin-left: -5px;
-}
-
+    border-radius: 0 4px 4px 0; }
 .select2-container.starters .select2-choice {
-    -webkit-border-radius: 4px 0 0 4px;
-    -moz-border-radius: 4px 0 0 4px;
-    border-radius: 4px 0 0 4px;
-}
+  -webkit-border-radius: 4px 0 0 4px;
+  -moz-border-radius: 4px 0 0 4px;
+  border-radius: 4px 0 0 4px; }
+
+.view-places {
+  margin: 10px; }
+
+#container {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+  position: relative; }
+
+.thumbnail {
+  background: white; }
+  .thumbnail h3 {
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075); }
+    .thumbnail h3:first-child {
+      text-align: center;
+      background: #eeeeee;
+      margin: -3px -3px 3px -3px;
+      border-radius: 3px 3px 0 0;
+      border-bottom: 1px solid #dddddd; }
+
+.label {
+  margin-right: 10px;
+  margin-top: 5px;
+  padding-bottom: 5px;
+  cursor: default; }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none; }
+
+a#fdbk_tab {
+  background-color: #222222;
+  top: 25%;
+  left: 0;
+  width: 42px;
+  height: 102px;
+  color: white;
+  cursor: pointer;
+  text-indent: -100000px;
+  overflow: hidden;
+  position: fixed;
+  z-index: 100000;
+  margin-left: -7px;
+  background-image: url(../img/feedback_trans_tab.png);
+  _position: absolute;
+  _background-image: url(../img/feedback_tab_ie6.png);
+  background-color: #222222; }
+  a#fdbk_tab:hover {
+    margin-left: -4px; }
+
+#ng-view {
+  position: relative;
+  min-height: 500px; }
+
+.view-enter-setup, .view-leave-setup, .slide-enter-setup, .slide-leave-setup, .wave-enter-setup, .wave-leave-setup {
+  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
+  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
+  -ms-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
+  -o-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
+  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s; }
+
+.view-enter-setup {
+  opacity: 0; }
+  .view-enter-setup.view-enter-start {
+    opacity: 1; }
+
+.view-leave-setup {
+  opacity: 1; }
+  .view-leave-setup.view-leave-start {
+    opacity: 0; }
 
 @media (max-width: 979px) {
-    body {
-        padding-top: 0px;
-    }
-    .map-container {
-        margin-top: -20px;
-    }
-    .map-positioner h1 {
-        left: 0px;
-        z-index: 200;
-    }
-    .version {
-        display: none;
-    }
-}
+  body {
+    padding-top: 0px; }
 
+  .map-container {
+    margin-top: -20px; }
+
+  .map-positioner h1 {
+    left: 0px;
+    z-index: 200; }
+
+  .version {
+    display: none; } }
 @media (max-width: 767px) {
-    .map-container {
-        margin-right: -20px;
-        margin-left: -20px;
-    }
-}
-
+  .map-container {
+    margin-right: -20px;
+    margin-left: -20px; } }
