--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -12,7 +12,7 @@
     <link href="static/lib/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="static/lib/css/flags.css" rel="stylesheet">
     <link href="static/lib/select2/select2.css" rel="stylesheet">
-    <link href="static/lib/colorbox.css" rel="stylesheet">
+    <link href="static/lib/css/colorbox.css" rel="stylesheet">
     <link href="static/lib/css/tips.css" rel="stylesheet">
 
     <link href="static/css/app.css" rel="stylesheet">
