--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -101,9 +101,9 @@
     <!-- Main content
     ================================================== -->
     <!--<a href="feedbackyform.html" id="fdbk_tab" class="fdbk_tab_left ">FEEDBACK</a>-->
+  <img class="version" src="static/img/alpha.png" alt="Alfa verze"/>
     <div data-ng-view id="ng-view" ng-animate="{enter: 'view-enter'}"></div>
 
-  <img class="version" src="static/img/alpha.png" alt="Alfa verze">
 
     <!-- Le javascript
     ================================================== -->
