--- a/wsgi/openshift/core/static/sass/_map-container.sass
+++ b/wsgi/openshift/core/static/sass/_map-container.sass
@@ -26,6 +26,7 @@ $map-height:500px
 
   #map-holder
     height: $map-height
+    position: relative
 
   .loading-indicator
     background-image: url(../img/map-ajax-loader.gif)
@@ -34,3 +35,16 @@ $map-height:500px
     position: absolute
     bottom: 10px
     right: 10px
+  .map-label
+    position: absolute
+    vertical-align: middle
+    display: table
+    span
+      font-weight: bold
+      color: white
+      text-shadow: 1px 1px 9px rgba(0, 0, 0, 0.8), 0 0 30px rgba(0, 0, 0, 0.075)
+      position: relative
+      z-index: 10
+      display: table-cell
+      vertical-align: middle
+      line-height: 100%
