bootstap upgraded to version 3

--- a/wsgi/openshift/core/static/sass/_practice.sass
+++ b/wsgi/openshift/core/static/sass/_practice.sass
@@ -20,6 +20,10 @@
 .select2-container .select2-choice, .select2-choice div
   padding: 8px
   font-size: 20px
+  height: auto
+
+.select2-container .select2-choice div
+  width: 35px
 
 .select2-results
   max-height: 300px
