--- a/wsgi/openshift/core/static/sass/_global.sass
+++ b/wsgi/openshift/core/static/sass/_global.sass
@@ -1,13 +1,23 @@
 body
-  padding-top: 40px
+  padding-top: 50px
   overflow-y: scroll
+  font-size: 1.5em
+  li
+    list-style-type: none
+.label
+
+h1, h2, h3
+  font-weight: bold
 
 ul.dropdown-menu.login
   padding-top: 10px
-  padding-bottom: 10px
   li
     margin-right: 10px
     margin-left: 10px
+    margin-bottom: 10px
+    width: 200px
+  button.btn
+    width: 100%
 
 .dropdown
   i.icon-user
@@ -23,7 +33,8 @@ ul.dropdown-menu.login
   z-index: 10
 
 .vip
-  background: url(../img/flower_bg.jpg) bottom right
+  .map-container
+    background: url(../img/flower_bg.jpg) bottom right
 
 .loading-indicator
   background: url(../img/ajax-loader.gif) no-repeat center
@@ -51,6 +62,7 @@ ul.dropdown-menu.login
       margin: -3px -3px 3px -3px
       border-radius: 3px 3px 0 0
       border-bottom: 1px solid #ddd
+      padding: 10px
 
 .label
   margin-right: 10px
@@ -102,3 +114,23 @@ a#fdbk_tab
   opacity: 1
   &.view-leave-start
     opacity: 0
+
+.welcome-page
+  h1
+    font-size: 3em
+  p
+    font-size: 0.75em
+    padding: 30px
+    line-height: 150%
+  [class*="col-"]
+    float: none
+  .main-paragraph
+    font-size: 1.25em
+
+$huge-radius: 9px
+.btn-huge
+  padding: 21px 29px
+  font-size: 27.5px
+  -webkit-border-radius: $huge-radius
+  -moz-border-radius: $huge-radius
+  border-radius: $huge-radius
