--- a/wsgi/openshift/core/static/sass/_bootstrap-fixes.sass
+++ b/wsgi/openshift/core/static/sass/_bootstrap-fixes.sass
@@ -287,3 +287,8 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini
   -webkit-border-radius: 3px
   -moz-border-radius: 3px
   border-radius: 3px
+  
+@media (max-width: 767px) /* @grid-float-breakpoint -1 */
+  .navbar-fixed-top
+    position: relative
+    top: auto
