--- a/wsgi/openshift/core/static/css/app.css
+++ b/wsgi/openshift/core/static/css/app.css
@@ -352,7 +352,8 @@ ul.dropdown-menu.login {
   position: relative; }
 
 .thumbnail {
-  background: white; }
+  background: white;
+  margin-bottom: 20px; }
   .thumbnail h3 {
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075); }
     .thumbnail h3:first-child {
@@ -362,6 +363,9 @@ ul.dropdown-menu.login {
       border-radius: 3px 3px 0 0;
       border-bottom: 1px solid #dddddd;
       padding: 10px; }
+  .thumbnail a.btn {
+    font-weight: bold;
+    margin: -4px 10px 0 -4px; }
 
 .label {
   margin-right: 10px;
