--- a/wsgi/openshift/core/static/sass/_global.sass
+++ b/wsgi/openshift/core/static/sass/_global.sass
@@ -64,6 +64,7 @@ ul.dropdown-menu.login
 
 .thumbnail
   background: white
+  margin-bottom: 20px
   h3
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), 0 0 30px rgba(0, 0, 0, 0.075)
     &:first-child
@@ -73,6 +74,9 @@ ul.dropdown-menu.login
       border-radius: 3px 3px 0 0
       border-bottom: 1px solid #ddd
       padding: 10px
+  a.btn
+    font-weight: bold
+    margin: -4px 10px 0 -4px
 
 .label
   margin-right: 10px
