--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -59,11 +59,8 @@
       <a class="navbar-brand" href="#">Zeměpis</a>
       <div class="nav-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav  pull-left">
-                <li ng-class="getActiveClass('/view/world/')">
-                  <a href="#/view/world/">Mapa Světa</a>
-                </li>
-                <li ng-class="getActiveClass('/view/us/')">
-                  <a href="#/view/us/">Mapa USA</a>
+                <li ng-class="getActiveClass('/view/')">
+                  <a href="#/view/">Mapy</a>
                 </li>
         </ul>
           ...
