name and description update

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -2,7 +2,7 @@
 <html data-ng-app="myApp" data-ng-controller="AppCtrl">
   <head>
     <meta charset="utf-8">
-    <title>{{ title }}Zeměpis</title>
+    <title>{{ title }}Inteligentní Zeměpis</title>
     {% if isProduction  %}
         <script type='text/javascript'>
         window.Muscula = { settings:{
@@ -56,7 +56,7 @@
       <span class="icon-bar"></span>
     </button>
 
-      <a class="navbar-brand" href="#">Zeměpis</a>
+      <a class="navbar-brand" href="#">Inteligentní Zeměpis</a>
       <div class="nav-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav  pull-left">
                 <li ng-class="getActiveClass('/view/')">
