alpha version banner moved to the right

--- a/wsgi/openshift/core/static/css/app.css
+++ b/wsgi/openshift/core/static/css/app.css
@@ -327,7 +327,7 @@ ul.dropdown-menu.login {
 
 .version {
   border: 0px none currentColor;
-  left: 0px;
+  right: 0px;
   position: absolute;
   top: 40px;
   z-index: 10; }
