--- a/wsgi/openshift/core/static/sass/_global.sass
+++ b/wsgi/openshift/core/static/sass/_global.sass
@@ -37,7 +37,7 @@ ul.dropdown-menu.login
 
 .version
   border: 0px none currentColor
-  left: 0px
+  right: 0px
   position: absolute
   top: 40px
   z-index: 10
