--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -59,8 +59,8 @@
       <a class="navbar-brand" href="#">Inteligentní Zeměpis</a>
       <div class="nav-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav  pull-left">
-                <li ng-class="getActiveClass('/view/')">
-                  <a href="#/view/">Mapy</a>
+                <li ng-class="getActiveClass('/view/world/')">
+                  <a href="#/view/world/">Mapa světa</a>
                 </li>
         </ul>
           ...
