--- a/wsgi/openshift/core/static/css/app.css
+++ b/wsgi/openshift/core/static/css/app.css
@@ -396,9 +396,31 @@ a#fdbk_tab {
   a#fdbk_tab:hover {
     margin-left: -4px; }
 
+html, body {
+  height: 100%; }
+
+#wrap {
+  min-height: 100%;
+  padding-bottom: 30px; }
+
+#footer {
+  background: -webkit-linear-gradient(top, white, #eeeeee);
+  background: -moz-linear-gradient(top, white, #eeeeee);
+  background: -o-linear-gradient(top, white, #eeeeee);
+  background: -ms-linear-gradient(top, white, #eeeeee);
+  color: #666666;
+  text-align: center;
+  clear: both;
+  position: relative;
+  z-index: 10;
+  height: 30px;
+  margin-top: -30px; }
+
 #ng-view {
   position: relative;
-  min-height: 500px; }
+  min-height: 500px;
+  height: auto;
+  min-height: 100%; }
 
 .view-enter-setup, .view-leave-setup, .slide-enter-setup, .slide-leave-setup, .wave-enter-setup, .wave-leave-setup {
   -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
